--- a/Example_vb/Example_vb.vbproj
+++ b/Example_vb/Example_vb.vbproj
@@ -121,6 +121,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="GenerateDatabase.sql" />
+    <None Include="Resources\Add_8x_16x.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
